исправления для постмена24